force-app/main/default/objects/Reinstatement__c/Reinstatement__c.object-meta.xml
<CustomObject>
    <description>Used to capture reinstatement against Side A DIC product Quote/Policy</description>
    <label>Reinstatement</label>
    <nameField>
        <label>Reinstatement Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Reinstatements</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>