force-app/main/default/objects/Reinstatement__c/fields/Policy__c.field-meta.xml
<CustomField>
    <fullName>Policy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Policy of a reinstatement</inlineHelpText>
    <label>Policy</label>
    <referenceTo>InsurancePolicy</referenceTo>
    <relationshipLabel>Reinstatements</relationshipLabel>
    <relationshipName>Reinstatements</relationshipName>
    <type>Lookup</type>
</CustomField>