force-app/main/default/objects/Reinstatement__c/fields/Quote__c.field-meta.xml
<CustomField>
    <fullName>Quote__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Quote of a reinstatement</inlineHelpText>
    <label>Quote</label>
    <referenceTo>Quote2__c</referenceTo>
    <relationshipLabel>Reinstatements</relationshipLabel>
    <relationshipName>Reinstatements</relationshipName>
    <type>Lookup</type>
</CustomField>