force-app/main/default/objects/Reinstatement__c/recordTypes/Reinstatement_for_Policy.recordType-meta.xml
<RecordType>
    <fullName>Reinstatement_for_Policy</fullName>
    <active>true</active>
    <label>Reinstatement for Policy</label>
</RecordType>