force-app/main/default/objects/Reinstatement__c/recordTypes/Reinstatement_for_Portfolio.recordType-meta.xml
<RecordType>
    <fullName>Reinstatement_for_Portfolio</fullName>
    <active>false</active>
    <label>Reinstatement for Portfolio</label>
</RecordType>