force-app/main/default/objects/Reinstatement__c/recordTypes/Reinstatement_for_Quote.recordType-meta.xml
<RecordType>
    <fullName>Reinstatement_for_Quote</fullName>
    <active>true</active>
    <label>Reinstatement for Quote</label>
</RecordType>