force-app/main/default/objects/Reinstatement__c/validationRules/Policy_Reinstatement.validationRule-meta.xml
<ValidationRule>
    <fullName>Policy_Reinstatement</fullName>
    <active>true</active>
    <errorConditionFormula>AND(RecordType.DeveloperName ==&quot;Reinstatement_for_Quote&quot;,  
NOT( ISBLANK(Policy__c) ) )</errorConditionFormula>
    <errorMessage>You cannot create a Reinstatement of Quote from Policy</errorMessage>
</ValidationRule>