force-app/main/default/objects/Reinstatement__c/validationRules/Quote_Reinstatement.validationRule-meta.xml
<ValidationRule>
    <fullName>Quote_Reinstatement</fullName>
    <active>true</active>
    <errorConditionFormula>AND(RecordType.DeveloperName ==&quot;Reinstatement_for_Policy&quot;,
 NOT( ISBLANK( Quote__c ) ) )</errorConditionFormula>
    <errorMessage>You cannot create a Reinstatement of Policy from Quote</errorMessage>
</ValidationRule>